--- a/p5.js/Interactive Display with Rotating Blocks /style.css
+++ b/p5.js/Interactive Display with Rotating Blocks /style.css
@@ -1,7 +1,8 @@
-html, body {
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   margin: 0;
-  padding: 0;
-}
-canvas {
-  display: block;
+  background-color: black;
 }
