--- a/p5.js/Interactive Display with Rotating Blocks /style.css
+++ b/p5.js/Interactive Display with Rotating Blocks /style.css
@@ -6,3 +6,9 @@ body {
   margin: 0;
   background-color: black;
 }
+
+.cim {
+  color: rgb(142, 140, 137); 
+  font-size: 18px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
