--- a/Spam filter/spam-filter.css
+++ b/Spam filter/spam-filter.css
@@ -27,3 +27,49 @@ textarea {
   margin: 25px 0;
   text-shadow: 2px 2px 2px rgb(90, 12, 51);
 }
+
+.title {
+  font-size: 2.5rem;
+}
+
+.description {
+  margin-top: 15px;
+  font-size: 1.4rem;
+}
+
+.message-label {
+  display: block;
+  margin-bottom: 20px;
+  font-size: 1.5rem;
+  
+}
+
+#message-input:placeholder-shown,
+textarea {
+  font-size: 1.1rem;
+}
+
+.btn {
+  display: block;
+  cursor: pointer;
+  width: 150px;
+  margin: 10px auto;
+  color: whitesmoke;
+  background-color: hotpink;
+  border-radius: 50px;
+  font-size: 16px;
+  border: 0;
+  box-shadow: 2px 2px 4px 1px rgb(90, 12, 51);
+  padding: 5px 0;
+}
+
+.btn:hover {
+  background-color: rgb(135, 16, 76);
+  box-shadow: 2px 2px 4px 1px rgb(57, 6, 30);
+}
+
+#result {
+  font-size: 2rem;
+  margin: 20px 0;
+  color: rgb(57, 6, 30);
+}
