--- a/Platformer game/platformer-game.css
+++ b/Platformer game/platformer-game.css
@@ -16,3 +16,21 @@ body {
   text-shadow: 2px 2px 2px rgb(182, 182, 243);
   font-size: 40px;
 }
+
+.instructions {
+  text-align: center;
+  font-size: 1.2rem;
+  margin: 15px;
+  background-color: rgb(22, 231, 220);
+}
+
+.btn {
+  cursor: pointer;
+  width: 100px;
+  margin: 10px;
+  color: #0a0a23;
+  font-size: 16px;
+  background-color: whitesmoke;
+  border: 1px solid #333;
+  border-radius: 7px;
+}
