--- a/Author page/author-page.css
+++ b/Author page/author-page.css
@@ -40,3 +40,33 @@ body {
   height: 150px;
   object-fit: cover;
 }
+
+.purple-divider {
+  background-color: var(--dark-purple);
+  width: 100%;
+  height: 15px;
+}
+
+.author-name {
+  margin: 10px;
+}
+
+.bio {
+  margin: 20px;
+}
+
+.error-msg {
+  color: var(--light-grey);
+}
+
+.btn {
+  cursor: pointer;
+  width: 200px;
+  margin: 10px;
+  color: var(--main-bg-color);
+  font-size: 14px;
+  background-color: var(--golden-yellow);
+  background-image: linear-gradient(#fecc4c, #ffac33);
+  border-color: var(--golden-yellow);
+  border-width: 3px;
+}
