--- a/Forum/forum.css
+++ b/Forum/forum.css
@@ -83,3 +83,22 @@ td {
   color: var(--medium-grey);
   text-decoration: none;
 }
+
+
+.category {
+  padding: 3px;
+  color: var(--black);
+  text-decoration: none;
+  display: block;
+  width: fit-content;
+  margin: 10px 0 10px;
+}
+
+.career {
+  background-color: var(--salmon-color);
+}
+
+.feedback,
+.html-css {
+  background-color: var(--light-blue);
+}
