--- a/Questions/questions.css
+++ b/Questions/questions.css
@@ -20,3 +20,18 @@ p {
   margin-bottom: 1.25rem;
   color: grey;
 }
+
+.section {padding: 5rem 0;}
+
+.section-center {
+  width: 90vw;
+  margin: 0 auto;
+  max-width: 1170px;
+  max-width: 620px;
+}
+
+@media screen and (min-width: 992px) {
+  .section-center {
+    width: 95vw;
+  }
+}
