--- a/Questions/questions.css
+++ b/Questions/questions.css
@@ -35,3 +35,23 @@ p {
     width: 95vw;
   }
 }
+
+.title {
+  margin-top: 15vh;
+  margin-bottom: 4rem;
+}
+
+.title h2 {
+  color: rgb(166, 135, 77);
+  font-family: "Great Vibes", cursive;
+  text-align: center;
+  font-size: 33px;
+}
+
+.question {
+  background: white;
+  border-radius: 0.5rem;
+  box-shadow:0 5px 15px rgba(0, 0, 0, 0.1);
+  padding: 1.5rem 1.5rem 0 1.5rem;
+  margin-bottom: 2rem;
+}
