--- a/Questions/questions.css
+++ b/Questions/questions.css
@@ -55,3 +55,17 @@ p {
   padding: 1.5rem 1.5rem 0 1.5rem;
   margin-bottom: 2rem;
 }
+
+.question-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-transform: capitalize;
+  padding-bottom: 1rem;
+}
+
+.question-title p {
+  margin-bottom: 0;
+  letter-spacing:0.25rem;
+  color: rgb(53, 52, 52);
+}
