--- a/Questions/questions.css
+++ b/Questions/questions.css
@@ -69,3 +69,31 @@ p {
   letter-spacing:0.25rem;
   color: rgb(53, 52, 52);
 }
+
+.question-btn {
+  font-size: 1.5rem;
+  background: transparent;
+  border-color: transparent;
+  cursor: pointer;
+  color: rgb(166, 135, 77);
+  transition: all 0.3s linear;
+}
+
+.question-btn:hover {transform: rotate(90deg);}
+
+.question-text {
+  padding: 1rem 0 1.5rem 0;
+  border-top: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.question-text p {margin-bottom: 0;}
+
+.question-text {display: none;}
+
+.show-text .question-text {display: block;}
+
+.minus-icon {display: none;}
+
+.show-text .minus-icon {display: inline;}
+
+.show-text .plus-icon {display: none;} 
