--- a/Navbar/navbar.css
+++ b/Navbar/navbar.css
@@ -41,3 +41,31 @@ nav {
   justify-content: space-between;
   padding: 1rem;
 }
+
+.nav-toggle {
+  font-size: 1.6rem;
+  color: rgb(72, 141, 210);
+  background: transparent;
+  border-color: transparent;
+  transition: all 0.3s linear;
+  cursor: pointer;
+}
+
+.nav-toggle:hover {
+  color: rgb(91, 90, 90);
+  transform: rotate(90deg);
+}
+
+.links a {
+  color: rgb(91, 90, 90);
+  font-size: 1rem;
+  padding: 6px;
+  display: block;
+  transition: all 0.3s linear;
+}
+
+.links a:hover {
+  background: rgba(72, 141, 210, 0.618);
+  color: whitesmoke;
+  padding-left: 3px;
+}
