--- a/Navbar/navbar.css
+++ b/Navbar/navbar.css
@@ -1,3 +1,4 @@
+
 body {
   font-family: "Raleway", sans-serif;
   background: rgb(240, 238, 238);
@@ -80,7 +81,6 @@ nav {
 
 .show-links {height: 10rem;}
 
-
 @media screen and (min-width: 800px) {
   .nav-center {
     max-width: 1170px;
@@ -108,3 +108,16 @@ nav {
     padding: 0;
     background: transparent;
   }
+  .social-icons {
+    display: flex;
+  }
+  .social-icons a {
+    margin: 0 0.5rem;
+    color: rgb(72, 141, 210);
+    transition: all 0.3s linear;
+    font-size: 22px;
+  }
+  .social-icons a:hover {
+    color: rgb(91, 90, 90);
+  }
+}
