--- a/Sidebar/sidebar.css
+++ b/Sidebar/sidebar.css
@@ -1,164 +1,29 @@
-*, ::after, ::before {
+
+*,
+::after,
+::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
 body {
-  font-family: "Raleway", sans-serif;
-  background: rgb(234, 231, 231);
-  color: grey;
+  font-family: "Open Sans", sans-serif;
+  background: rgb(247, 225, 229);
   line-height: 1.5;
   font-size: 0.875rem;
 }
 
-ul {
-  list-style-type: none;
-}
+ul {list-style-type: none;}
 
-a {
-  text-decoration: none;
-}
-
-.section {
-  padding: 5rem 0;
-}
-
-.section-center {
-  width: 90vw;
-  margin: 0 auto;
-  max-width: 1170px;
-}
-
-@media screen and (min-width: 992px) {
-  .section-center {
-    width: 95vw;
-  }
-}
-
-main {
-  min-height: 100vh;
-  display: grid;
-  place-items: center;
-}
-
-.sidebar-toggle {
-  position: fixed;
-  top: 2rem;
-  right: 3rem;
-  font-size: 2rem;
-  background: transparent;
-  border-color: transparent;
-  color: hotpink;
-  transition: all 0.3s linear;
-  cursor: pointer;
-  animation: bounce 2s ease-in-out infinite;
-}
-
-.sidebar-toggle:hover {
-  color: pink;
-}
-
-@keyframes bounce {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.5);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
-
-.sidebar-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem 1.5rem;
-}
-
-.close-btn {
-  font-size: 1.75rem;
-  background: transparent;
-  border-color: transparent;
-  color: hotpink;
-  transition: all 0.3s linear;
-  cursor: pointer;
-  color: rgb(185, 4, 4);
-}
-
-.close-btn:hover {
-  color: rgb(243, 112, 112);
-  transform: rotate(360deg);
-}
+a {text-decoration: none;}
 
 .logo {
-  font-size: 33px;
-  font-weight: 600;
-  text-shadow: 1px 1px 2px hotpink;
-  justify-content: center;
-  height: 22px;
-  margin-left: -6px;
-}
-
-.logo span {
+  font-size: 28px;
   color: hotpink;
-  text-shadow: 1px 1px 2px grey;
+  letter-spacing: 5px;
+  font-weight: bold;
+  text-shadow: 2px 2px 2px rgb(152, 150, 150);
 }
 
-.links a {
-  display: block;
-  font-size: 1.5rem;
-  text-transform: capitalize;
-  padding: 1rem 1.5rem;
-  color: #666;
-  transition: all 0.3s linear;
-}
-
-.links a:hover {
-  background: pink;
-  color: rgb(245, 17, 131);
-  padding-left: 1.75rem;
-}
-
-.social-icons {
-  justify-self: center;
-  display: flex;
-  padding-bottom: 2rem;
-}
-
-.social-icons a {
-  font-size: 1.5rem;
-  margin: 0 0.5rem;
-  color: hotpink;
-  transition: all 0.3s linear;
-}
-
-.social-icons a:hover {
-  color: rgb(245, 17, 131);
-}
-
-.sidebar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgb(251, 237, 249);
-  display: grid;
-  grid-template-rows: auto 1fr auto;
-  row-gap: 1rem;
-  box-shadow: rgb(185, 4, 4);
-  transition: all 0.3s linear;
-}
-
-.show-sidebar {
-  transform: translate(0);
-}
-
-@media screen and (min-width: 676px) {
-  .sidebar {
-    width: 400px;
-  }
-}
+.logo span {color: rgb(180, 7, 94);}
