--- a/Sidebar/sidebar.css
+++ b/Sidebar/sidebar.css
@@ -26,4 +26,23 @@ a {text-decoration: none;}
   text-shadow: 2px 2px 2px rgb(152, 150, 150);
 }
 
+.section {padding: 5rem 0;}
+
+.section-center {
+  width: 90vw;
+  margin: 0 auto;
+  max-width: 1170px;
+}
+
+@media screen and (min-width: 992px) {
+  .section-center {
+    width: 95vw;
+  }
+}
+
+main {
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+}
 .logo span {color: rgb(180, 7, 94);}
