--- a/Sidebar/sidebar.css
+++ b/Sidebar/sidebar.css
@@ -61,3 +61,22 @@ main {
 }
 
 .sidebar-toggle:hover {color: rgb(180, 7, 94);}
+
+@keyframes bounce {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.5);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.sidebar-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 1.5rem;
+}
