--- a/Sidebar/sidebar.css
+++ b/Sidebar/sidebar.css
@@ -26,6 +26,8 @@ a {text-decoration: none;}
   text-shadow: 2px 2px 2px rgb(152, 150, 150);
 }
 
+.logo span {color: rgb(180, 7, 94);}
+
 .section {padding: 5rem 0;}
 
 .section-center {
@@ -45,7 +47,6 @@ main {
   display: grid;
   place-items: center;
 }
-.logo span {color: rgb(180, 7, 94);}
 
 .sidebar-toggle {
   position: fixed;
@@ -79,4 +80,74 @@ main {
   justify-content: space-between;
   align-items: center;
   padding: 1rem 1.5rem;
+}
+
+.close-btn {
+  font-size: 1.75rem;
+  background: transparent;
+  border-color: transparent;
+  color: hotpink;
+  transition: all 0.3s linear;
+  cursor: pointer;
+  color: hsl(360, 67%, 44%);
+}
+
+.close-btn:hover {
+  color: hsl(0, 90%, 74%);
+  transform: rotate(360deg);
+}
+
+.links a {
+  display: block;
+  font-size: 1.5rem;
+  text-transform: capitalize;
+  padding: 1rem 1.5rem;
+  color: hotpink;
+  transition: all 0.3s linear;
+}
+
+.links a:hover {
+  background: rgba(255, 105, 180, 0.24);
+  color: hotpink;
+  padding-left: 1.75rem;
+}
+
+.social-icons {
+  justify-self: center;
+  display: flex;
+  padding-bottom: 2rem;
+}
+
+.social-icons a {
+  font-size: 1.5rem;
+  margin: 0 0.5rem;
+  color: hotpink;
+  transition: all 0.3s linear;
+}
+
+.social-icons a:hover {
+  color: rgb(180, 7, 94);
+}
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: whitesmoke;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  row-gap: 1rem;
+  box-shadow: hsl(360, 67%, 44%);
+  transition: all 0.3s linear;
+  transform: translate(-100%);
+}
+.show-sidebar {
+  transform: translate(0);
+}
+@media screen and (min-width: 676px) {
+  .sidebar {
+    width: 400px;
+  }
 }
