--- a/Review/review.css
+++ b/Review/review.css
@@ -30,3 +30,23 @@ h2 {
   margin-top: 20px;
   border: 4px double rgb(253, 36, 224);
 }
+
+.img-container {
+  position: relative;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin: 0 auto;
+  margin-bottom: 1.5rem;
+  border: 3px dashed rgb(253, 36, 224);
+  box-shadow: 2px 2px 15px 2px rgb(45, 0, 23);
+}
+
+  #person-img {
+    width: 100%;
+    display: block;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+    position: relative;
+  }
