--- a/Review/review.css
+++ b/Review/review.css
@@ -50,3 +50,23 @@ h2 {
     border-radius: 50%;
     position: relative;
   }
+
+
+#author {
+  text-align: center;
+  font-size: 20px;
+}
+
+#info {
+  text-align: justify;
+  line-height: 1.4;
+  margin: 10px 10px;
+}
+
+#job {
+  background-color: rgb(64, 1, 33);
+  padding: 5px 0;
+  font-size: 18px;
+  text-align: center;
+  color: rgb(244, 129, 186);
+}
