--- a/Modal/modal.css
+++ b/Modal/modal.css
@@ -7,6 +7,21 @@ body {
   font-size: 0.875rem;
 }
 
+.btn {
+  text-transform: uppercase;
+  background: transparent;
+  color: black;
+  padding: 0.375rem 0.75rem;
+  letter-spacing: 0.25rem;
+  display: inline-block;
+  transition: all 0.3s linear;
+  font-size: 0.875rem;
+  border: 2px solid black;
+  cursor: pointer;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  border-radius: 0.5rem;
+}
+
 ul {list-style-type: none;}
 
 a {text-decoration: none;}
