--- a/Modal/modal.css
+++ b/Modal/modal.css
@@ -7,6 +7,29 @@ body {
   font-size: 0.875rem;
 }
 
+main {
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+}
+
+.hero {
+  min-height: 100vh;
+  background: url("/img/hero.jpeg") center/cover no-repeat;
+  display: grid;
+  place-items: center;
+}
+
+.banner {
+  background-color: whitesmoke;
+  padding: 4rem 0;
+  border-radius: 0.5rem;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  width: 90vw;
+  max-width: 620px;
+}
+
 .btn:hover {
   color: whitesmoke;
   background: black;
