--- a/Modal/modal.css
+++ b/Modal/modal.css
@@ -7,6 +7,25 @@ body {
   font-size: 0.875rem;
 }
 
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(73, 166, 233, 0.5);
+  display: grid;
+  place-items: center;
+  transition: all 0.3s linear;
+  visibility: hidden;
+  z-index: -10;
+}
+
+.open-modal {
+  visibility: visible;
+  z-index: 10;
+}
+
 .modal-btn {
   margin-top: 2rem;
   background: blue;
