--- a/Modal/modal.css
+++ b/Modal/modal.css
@@ -7,35 +7,52 @@ body {
   font-size: 0.875rem;
 }
 
-.modal-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(73, 166, 233, 0.5);
-  display: grid;
-  place-items: center;
-  transition: all 0.3s linear;
-  visibility: hidden;
-  z-index: -10;
-}
+ul {list-style-type: none;}
 
-.open-modal {
-  visibility: visible;
-  z-index: 10;
-}
+a {text-decoration: none;}
 
-.modal-btn {
-  margin-top: 2rem;
-  background: blue;
-  border-color: blue;
-  color: whitesmoke;
-}
+img:not(.logo) {width: 100%;}
 
-.modal-btn:hover {
+img {display: block;}
+
+h1 {font-size: 45px; letter-spacing: 0.5rem;}
+
+h3 {font-size: 30px;}
+
+.btn {
+  text-transform: uppercase;
   background: transparent;
-  color: blue;
+  color: black;
+  padding: 0.375rem 0.75rem;
+  letter-spacing: 0.25rem;
+  display: inline-block;
+  transition: all 0.3s linear;
+  font-size: 0.875rem;
+  border: 2px solid black;
+  cursor: pointer;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  border-radius: 0.5rem;
+}
+
+.btn:hover {
+  color: whitesmoke;
+  background: black;
+}
+
+.section {
+  padding: 5rem 0;
+}
+
+.section-center {
+  width: 90vw;
+  margin: 0 auto;
+  max-width: 1170px;
+}
+
+@media screen and (min-width: 992px) {
+  .section-center {
+    width: 95vw;
+  }
 }
 
 main {
@@ -61,51 +78,62 @@ main {
   max-width: 620px;
 }
 
-.btn:hover {
+.modal-btn {
+  margin-top: 2rem;
+  background: blue;
+  border-color: blue;
   color: whitesmoke;
-  background: black;
 }
 
-.section {
-  padding: 5rem 0;
-}
-
-.section-center {
-  width: 90vw;
-  margin: 0 auto;
-  max-width: 1170px;
-}
-
-@media screen and (min-width: 992px) {
-  .section-center {
-    width: 95vw;
-  }
-}
-
-
-.btn {
-  text-transform: uppercase;
+.modal-btn:hover {
   background: transparent;
-  color: black;
-  padding: 0.375rem 0.75rem;
-  letter-spacing: 0.25rem;
-  display: inline-block;
-  transition: all 0.3s linear;
-  font-size: 0.875rem;
-  border: 2px solid black;
-  cursor: pointer;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-  border-radius: 0.5rem;
+  color: blue;
 }
 
-ul {list-style-type: none;}
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(73, 166, 233, 0.5);
+  display: grid;
+  place-items: center;
+  transition: all 0.3s linear;
+  visibility: hidden;
+  z-index: -10;
+}
 
-a {text-decoration: none;}
+.open-modal {
+  visibility: visible;
+  z-index: 10;
+}
 
-img:not(.logo) {width: 100%;}
+.modal-container {
+  background: whitesmoke;
+  border-radius: 0.5rem;
+  width: 90vw;
+  height: 30vh;
+  max-width: 620px;
+  text-align: center;
+  display: grid;
+  place-items: center;
+  position: relative;
+}
 
-img {display: block;}
+.close-btn {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  font-size: 2rem;
+  background: transparent;
+  border-color: transparent;
+  color: rgb(174, 6, 6);
+  cursor: pointer;
+  transition: all 0.3s linear;
+}
 
-h1 {font-size: 45px; letter-spacing: 0.5rem;}
-
-h3 {font-size: 30px;}
+.close-btn:hover {
+  color: red;
+  transform: scale(1.3);
+}
