--- a/Counter/counter.css
+++ b/Counter/counter.css
@@ -16,3 +16,25 @@ h1 {
   background-clip: text;
   color: transparent;
 }
+
+#value {
+  font-size: 80px;
+  font-weight: 600;
+}
+
+button {
+  margin-top: 40px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: 600;
+  padding: 7px 12px 7px 12px;
+  border: 2px solid black;
+  border-radius: 7px;
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+button:hover {
+  background-color: black;
+  color: whitesmoke;
+  box-shadow: 4px 4px 4px hotpink;
+}
