--- a/Tabs/tabs.css
+++ b/Tabs/tabs.css
@@ -17,6 +17,22 @@ img:not(.logo) {
   width: 100%;
 }
 
+.section {
+  padding: 5rem 0;
+}
+
+.section-center {
+  width: 90vw;
+  margin: 0 auto;
+  max-width: 1170px;
+}
+
+@media screen and (min-width: 992px) {
+  .section-center {
+    width: 95vw;
+  }
+}
+
 img {
   display: block;
 }
