--- a/Tabs/tabs.css
+++ b/Tabs/tabs.css
@@ -6,6 +6,26 @@
   box-sizing: border-box;
 }
 
+.title {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+h2 {
+  letter-spacing: 20px;
+  font-size: 50px;
+  font-weight: 100;
+  margin-bottom: 20px;
+}
+
+h4 {
+  margin-bottom: 20px;
+  letter-spacing: 5px;
+  font-size: 20px;
+  text-shadow: 2px 2px 2px grey;
+  font-weight: 400;
+}
+
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background: whitesmoke;
