--- a/Tabs/tabs.css
+++ b/Tabs/tabs.css
@@ -6,6 +6,22 @@
   box-sizing: border-box;
 }
 
+.title p {
+  width: 80%;
+  margin: 0 auto;
+  color: rgb(119, 119, 194);
+}
+
+.about-img {
+  margin-bottom: 2rem;
+}
+
+.about-img img {
+  border-radius: 0.5rem;
+  object-fit: cover;
+  height: 20rem;
+}
+
 .title {
   text-align: center;
   margin-bottom: 30px;
