--- a/Video/video.css
+++ b/Video/video.css
@@ -1,4 +1,7 @@
-*, ::after, ::before {
+
+*,
+::after,
+::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -35,6 +38,12 @@ h1 {
   visibility: hidden;
 }
 
+header {
+  min-height: 100vh;
+  position: relative;
+  display: grid;
+  place-items: center;
+}
 
 .video-container {
   position: absolute;
@@ -59,9 +68,37 @@ h1 {
   border: none;
   transition: all 0.3s linear;
 }
-header {
-  min-height: 100vh;
-  position: relative;
-  display: grid;
-  place-items: center;
+
+.switch-btn span {
+  display: inline-block;
+  font-size: 14px;
+  cursor: pointer;
+  color: rgb(132, 132, 240);
+}
+.switch {
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgb(132, 132, 240);
+  border-radius: 10px;
+  margin: 0;
+  display: block;
+  transition: all 0.3s linear;
+}
+
+.slide .switch {
+  left: 50%;
+}
+
+header::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: -1;
 }
