--- a/Countdown-timer/countdown-timer.css
+++ b/Countdown-timer/countdown-timer.css
@@ -19,6 +19,29 @@ img {
   display: block;
 }
 
+.gift-info h4 {
+  letter-spacing: 2px;
+  font-size: 18px;
+}
+
+.gift-info p {
+  color: rgb(134, 134, 194);
+  text-align: justify;
+  margin: 25px 0;
+}
+
+@media screen and (min-width: 992px) {
+  .section-center {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    place-items: center;
+    gap: 3rem;
+    width: 95vw;
+  }
+  .gift-img {
+    margin-bottom: 0;
+  }
+}
 .section-center {
   width: 90vw;
   margin: 5rem auto;
