--- a/Countdown-timer/countdown-timer.css
+++ b/Countdown-timer/countdown-timer.css
@@ -19,6 +19,25 @@ img {
   display: block;
 }
 
+.section-center {
+  width: 90vw;
+  margin: 5rem auto;
+  max-width: 1170px;
+}
+
+.gift-img {
+  margin-bottom: 2rem;
+}
+
+.gift-info h3 {
+  text-transform: uppercase;
+  color: rgb(86, 86, 219);
+  font-size: 2.5rem;
+  font-weight: 100;
+  letter-spacing: 7px;
+  word-spacing: 10px;
+}
+
 .gift-info h4 {
   letter-spacing: 2px;
   font-size: 18px;
@@ -42,21 +61,31 @@ img {
     margin-bottom: 0;
   }
 }
-.section-center {
-  width: 90vw;
-  margin: 5rem auto;
-  max-width: 1170px;
+
+.deadline {
+  display: flex;
 }
 
-.gift-img {
-  margin-bottom: 2rem;
+.deadline-format {
+  background: rgb(86, 86, 219);
+  color: whitesmoke;
+  margin-right: 1rem;
+  width: 5rem;
+  height: 5rem;
+  display: grid;
+  place-items: center;
+  text-align: center;
 }
 
-.gift-info h3 {
-  text-transform: uppercase;
-  color: rgb(86, 86, 219);
-  font-size: 2.5rem;
+.deadline-format span {
+  display: block;
+  letter-spacing: 2px;
+  font-size: 0.85rem;
+}
+
+.deadline h4:not(.expired) {
+  font-size: 2rem;
   font-weight: 100;
-  letter-spacing: 7px;
-  word-spacing: 10px;
+  margin-bottom: 0.25rem;
+  letter-spacing: 0.25rem;
 }
