--- a/Color/color.css
+++ b/Color/color.css
@@ -12,6 +12,21 @@ body {
   box-shadow: 2px 2px 3px #9b0887;
 }
 
+a {
+  color: black;
+  text-decoration: none;
+  font-size: 18px;
+  background-color: #f1f5f8;
+  padding: 0 6px 1px 6px;
+  border-radius: 10px;
+  box-shadow: 2px 2px 2px grey;
+}
+
+a:hover, .btn:hover {
+  background-color: orangered;
+  color: #f1f5f8;
+}
+
 h4 {
   font-size: 25px;
   background-image: linear-gradient(90deg, #2f02fa, #f506c1, #ff0000);
