--- a/Color/color.css
+++ b/Color/color.css
@@ -12,6 +12,21 @@ body {
   box-shadow: 2px 2px 3px #9b0887;
 }
 
+h4 {
+  font-size: 25px;
+  background-image: linear-gradient(90deg, #2f02fa, #f506c1, #ff0000);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  padding-left: 20px;
+}
+
+li {
+  list-style-type: none;
+  margin-top: 6px;
+  padding-right: 20px;
+}
+
 a {
   color: black;
   text-decoration: none;
@@ -27,17 +42,36 @@ a:hover, .btn:hover {
   color: #f1f5f8;
 }
 
-h4 {
-  font-size: 25px;
-  background-image: linear-gradient(90deg, #2f02fa, #f506c1, #ff0000);
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent;
-  padding-left: 20px;
+.container {
+  text-align: center;
+  margin: 200px auto;
+  background-color: #cdd0d2;
+  width: 600px;
+  padding-top: 1px;
+  border-radius: 20px;
+  border: 4px dashed #333;
+  color: #333;
 }
 
-li {
-  list-style-type: none;
-  margin-top: 6px;
-  padding-right: 20px;
+.color {
+  background-color: #f1f5f8;
+  padding: 0 10px;
+  border-radius: 10px;
+  color: #222;
+}
+
+.btn {
+  border-radius: 10px;
+  font-size: 15px;
+  font-weight: 600;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: #222;
+  background-color: #cdd0d2;
+  padding: 10px 18px 10px 18px;
+  margin-bottom: 20px;
+}
+
+h2 {
+  font-size: 40px;
+  line-height: 1.5;
 }
