--- a/Lorem ipsum/lorem.css
+++ b/Lorem ipsum/lorem.css
@@ -1,22 +1,67 @@
 
-*,
-::after,
-::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+
+p {
+  margin-bottom: 20px;
+  color: rgb(214, 60, 137);
+  text-align: justify;
 }
 
-body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background: rgb(244, 207, 238);
-  line-height: 1.5;
+.btn {
+  background: hotpink;
+  color: rgb(124, 9, 67);
+  padding: 5px;
+  letter-spacing: 1px;
+  display: inline-block;
+  transition: all 0.3s linear;
   font-size: 0.875rem;
+  border: 2px solid hotpink;
+  cursor: pointer;
+  border-radius: 0.5rem;
+}
+
+.btn:hover {
+  color: hotpink;
+  background: rgb(124, 9, 67);
+  border-color: rgb(124, 9, 67);
+}
+
+.section-center {
+  width: 90vw;
+  margin: 0 auto;
+  max-width: 40rem;
+  margin-top: 5rem;
+  text-align: center;
 }
 
 h3 {
-  font-size: 30px;
-  font-weight: 100;
-  letter-spacing: 9px;
+  color: rgb(124, 9, 67);
 }
+
+.lorem-form {
+  text-transform: capitalize;
+  letter-spacing: 0.25rem;
+  margin-top: 2rem;
+  margin-bottom: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+label {
+  font-size: 1.25rem;
+  color: rgb(124, 9, 67);
+}
+
+input {
+  background-color: rgb(245, 234, 236);
+  color: rgb(124, 9, 67);
+  padding: 0.25rem 0.5rem;
+  width: 4rem;
+  border-radius: 0.5rem;
+  border: none;
+  margin: 0 0.5rem;
+  font-size: 1.25rem;
+}
+
+
 
