--- a/Menu/menu.css
+++ b/Menu/menu.css
@@ -1,9 +1,98 @@
-*,
-::after,
-::before {
+*, ::after, ::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  background: pink;
+  color: rgb(131, 7, 69);
+  line-height: 1.5;
+  font-size: 0.875rem;
+  font-family: "Quicksand", sans-serif;
+}
+
+img:not(.logo) {width: 100%;}
+
+img {display: block;}
+
+p {
+  margin-bottom: 1.25rem;
+  color: rgb(102, 101, 101);
+}
+
+.btn {
+  text-transform: uppercase;
+  background: transparent;
+  color: #222;
+  padding: 0.375rem 0.75rem;
+  letter-spacing: 0.25rem;
+  display: inline-block;
+  transition: all 0.3s linear;
+  font-size: 0.875rem;
+  border: 2px solid #222;
+  cursor: pointer;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  border-radius: 0.5rem;
+}
+
+.btn:hover {
+  color: white;
+  background: #222;
+}
+
+.section {padding: 5rem 0;}
+
+.menu {padding: 5rem 0;}
+
+.title {
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.title h2 {
+  font-weight: 100;
+  font-size: 50px;
+}
+
+.underline {
+  width: 10rem;
+  height: 0.25rem;
+  background: hotpink;
+  margin: 2px auto 30px;
+}
+
+.btn-container {
+  margin-bottom: 4rem;
+  display: flex;
+  justify-content: center;
+}
+
+.filter-btn {
+  background: transparent;
+  border-color: hotpink;
+  font-size: 1rem;
+  margin: 0 0.5rem;
+  letter-spacing: 1px;
+  border-radius: 0.5rem;
+  padding: 0.375rem 0.75rem;
+  color: hotpink;
+  cursor: pointer;
+  transition: all 0.3s linear;
+}
+
+.filter-btn:hover {
+  background: hotpink;
+  color: white;
+}
+
+.section-center {
+  width: 90vw;
+  margin: 0 auto;
+  max-width: 1170px;
+  display: grid;
+  gap: 3rem 2rem;
+  justify-items: center;
 }
 
 .menu-item {
@@ -25,88 +114,40 @@
   border-bottom: 0.5px dotted hotpink;
 }
 
-.filter-btn {
-  background: transparent;
-  border-color: hotpink;
-  font-size: 1rem;
-  margin: 0 0.5rem;
-  letter-spacing: 1px;
-  border-radius: 0.5rem;
-  padding: 0.375rem 0.75rem;
-  color: hotpink;
-  cursor: pointer;
-  transition: all 0.3s linear;
-}
-
-.filter-btn:hover {
-  background: hotpink;
-  color: white;
-}
-body {
-  background: pink;
-  color: rgb(131, 7, 69);
-  line-height: 1.5;
-  font-size: 0.875rem;
-  font-family: "Quicksand", sans-serif;
-}
-
-.title h2 {
-  font-weight: 100;
-  font-size: 50px;
-}
-
-.underline {
-  width: 10rem;
-  height: 0.25rem;
-  background: hotpink;
-  margin: 2px auto 30px;
-}
-
-.btn-container {
-  margin-bottom: 4rem;
-  display: flex;
-  justify-content: center;
-}
-
-img:not(.logo) {
-  width: 100%;
-}
-
-.btn:hover {
-  color: white;
-  background: #222;
-}
-
-/* section */
-.section {
-  padding: 5rem 0;
-}
-
-.menu {
-  padding: 5rem 0;
-}
-
-.title {
-  text-align: center;
-  margin-bottom: 2rem;
-}
-
-p {
-  margin-bottom: 1.25rem;
-  color: rgb(102, 101, 101);
-}
-
-.btn {
+.item-info h4 {
+  letter-spacing: 0.20rem;
   text-transform: uppercase;
-  background: transparent;
-  color: #222;
-  padding: 0.375rem 0.75rem;
-  letter-spacing: 0.25rem;
-  display: inline-block;
-  transition: all 0.3s linear;
-  font-size: 0.875rem;
-  border: 2px solid #222;
-  cursor: pointer;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-  border-radius: 0.5rem;
+  line-height: 1.25;
+  margin-bottom: 0.75rem;
+  margin-bottom: 0.5rem;
+  font-size: 16px;
+}
+
+.price {color: rgb(252, 22, 137);}
+
+.item-text {
+  margin-bottom: 0;
+  padding-top: 1rem;
+  color: rgb(250, 39, 145);
+}
+
+@media screen and (min-width: 768px) {
+  .menu-item {
+    grid-template-columns: 225px 1fr;
+    gap: 0 1.25rem;
+    max-width: 40rem;
+  }
+  .photo {
+    height: 175px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .section-center {
+    width: 95vw;
+    grid-template-columns: 1fr 1fr;
+  }
+  .photo {
+    height: 150px;
+  }
 }
