--- a/Age-callculator/age-cal.css
+++ b/Age-callculator/age-cal.css
@@ -19,3 +19,21 @@
   margin-left: 10%;
   margin-top: 10%;
 }
+
+
+.calculator h1 {
+  font-size: 60px;
+}
+
+.calculator h1 span {
+  color: rgb(221, 8, 140);
+}
+
+.input-box {
+  margin: 40px 0;
+  padding: 35px;
+  border-radius: 10px;
+  background: antiquewhite;
+  display: flex;
+  align-items: center;
+}
