--- a/Age-callculator/age-cal.css
+++ b/Age-callculator/age-cal.css
@@ -20,6 +20,23 @@
   margin-top: 10%;
 }
 
+.calculator h1 {
+  font-size: 60px;
+}
+
+.calculator h1 span {
+  color: rgb(221, 8, 140);
+}
+
+.input-box {
+  margin: 40px 0;
+  padding: 35px;
+  border-radius: 10px;
+  background: antiquewhite;
+  display: flex;
+  align-items: center;
+}
+
 .input-box input {
   flex: 1;
   margin-right: 20px;
@@ -43,20 +60,25 @@
   cursor: pointer;
 }
 
-
-.calculator h1 {
-  font-size: 60px;
+.input-box input::-webkit-calendar-picker-indicator {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: auto;
+  height: auto;
+  position: absolute;
+  background-position: calc(100% - 10px);
+  background-size: 30px;
+  cursor: pointer;
 }
 
-.calculator h1 span {
+#result {
+  font-size: 20px;
+}
+
+#result span {
   color: rgb(221, 8, 140);
-}
-
-.input-box {
-  margin: 40px 0;
-  padding: 35px;
-  border-radius: 10px;
-  background: antiquewhite;
-  display: flex;
-  align-items: center;
+  font-weight: bold;
+  font-size: 21px;
 }
