--- a/Background/background.css
+++ b/Background/background.css
@@ -12,9 +12,7 @@ h1 {
   text-shadow: 2px 2px 2px rgb(58, 104, 11);
 }
 
-i {
-  margin-left: 20px;
-}
+i {margin-left: 20px;}
 
 .container {
   width: 100%;
@@ -31,4 +29,30 @@ i {
   background-image: url(/kepek/background_change_img/background.png);
   overflow: hidden;
   position: relative;
+}
+
+.img-wrap {
+  width: 20px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  overflow: hidden;
+}
+
+span {
+  width: 1px;
+  height: 100%;
+  cursor: ew-resize;
+  background: #fff;
+  position: absolute;
+  left: 20px;
+  top: 0;
+}
+
+.arrow {
+  width: 40px;
+  position: absolute;
+  top: 50%;
+  margin-left: -20px;
+  margin-top: -20px;
 }
