--- a/Calendar/calendar.css
+++ b/Calendar/calendar.css
@@ -14,5 +14,12 @@
   justify-content: center;
 }
 
-
+.calendar {
+  width: 300px;
+  height: 250px;
+  background: hotpink;
+  display: flex;
+  align-items: center;
+  border-radius: 10px;
+}
 
