--- a/Calendar/calendar.css
+++ b/Calendar/calendar.css
@@ -23,3 +23,29 @@
   border-radius: 10px;
 }
 
+.left, .right {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 24px;
+  color: rgb(86, 17, 52);
+}
+
+.right {
+  width: 42%;
+  background: rgb(245, 52, 148);
+  color: pink;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.left {
+  width: 58%;
+}
+
+#date {
+  font-size: 100px;
+  line-height: 90px;
+}
