--- a/Circular/circular.css
+++ b/Circular/circular.css
@@ -38,3 +38,29 @@ body {
   box-shadow: inset 4px 4px 6px -1px rgba(0, 0, 0, 0.583),
               inset -4px -4px 6px -1px rgba(255,255,255,0.7);
 }
+
+#number {
+  font-weight: 600;
+  color: #2e2e2e;
+}
+
+circle {
+  fill: none;
+  stroke: url(#GradientColor);
+  stroke-width: 20px;
+  stroke-dasharray: 472;
+  stroke-dashoffset: 472;
+  animation: anim 2s linear forwards;
+}
+
+@keyframes anim {
+  100%{
+    stroke-dashoffset: 165;
+  }
+}
+
+svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
