--- a/Color/color-fcc.css
+++ b/Color/color-fcc.css
@@ -12,4 +12,24 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+h1 {
+  font-weight: 100;
+  font-size: 40px;
+  letter-spacing: 4px;
+  word-spacing: 10px;
+  background-color: rgba(144, 235, 238, 0.424);
+  width: 500px;
+  margin: auto;
+  border-radius: 30px;
+  padding: 20px;
+}
+
+p {
+  background-color: rgba(144, 235, 238, 0.424);
+  width: 200px;
+  margin: auto;
+  padding: 20px;
+  border-radius: 30px;
+}
+
 
