--- a/Drag and drop/drag-drop.css
+++ b/Drag and drop/drag-drop.css
@@ -14,3 +14,21 @@
   justify-content: center;
 }
 
+#left, #right {
+  width: 300px;
+  min-height: 400px;
+  margin: 20px;
+  border: 4px dashed rgb(252, 101, 177) ;
+}
+
+.list {
+  background: rgb(252, 101, 177);
+  height: 60px;
+  margin: 30px;
+  color: rgb(223, 215, 215);
+  display: flex;
+  align-items: center;
+  cursor: grab;
+  font-size: 25px;
+  justify-content: center;
+}
