--- a/Email/email.css
+++ b/Email/email.css
@@ -13,4 +13,20 @@ body {
   color: whitesmoke;
 }
 
+.hero h3 {
+  margin-top: 15%;
+  font-weight: 400;
+  font-size: 30px;
+}
+
+.hero h1 {
+  margin-top: 30px;
+  font-size: 50px;
+}
+
+.hero p {
+  margin: 10px 0 50px;
+}
+
+
 
