--- a/Gallery/gallery.css
+++ b/Gallery/gallery.css
@@ -14,3 +14,18 @@ body {
   display: flex;
   overflow-x: scroll;
 }
+
+.gallery div {
+  width: 100%;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-gap: 20px;
+  padding: 10px;
+  flex: none;
+}
+
+.gallery div img {
+  width: 100%;
+  filter: grayscale(100%);
+  transition: transform 0.5s;
+}
