--- a/Gallery/gallery.css
+++ b/Gallery/gallery.css
@@ -29,3 +29,26 @@ body {
   filter: grayscale(100%);
   transition: transform 0.5s;
 }
+
+.gallery::-webkit-scrollbar {
+  display: none;
+}
+
+.gallery-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 10% auto;
+}
+
+#backBtn, #nextBtn {
+  width: 50px;
+  cursor: pointer;
+  margin: 40px;
+}
+
+.gallery div img:hover {
+  filter: grayscale(0);
+  cursor: pointer;
+  transform: scale(1.1);
+}
