--- a/Meme/meme.css
+++ b/Meme/meme.css
@@ -7,9 +7,17 @@ body {
   font-family: "Quicksand", sans-serif;
 }
 
-.meme-generator img {
-  height: 430px;
-  object-fit: cover;
-}
 
+.meme-generator .generate-meme-btn {
+  padding: 8px 20px;
+  border: none;
+  border-left: 4px solid #222;
+  border-right: 4px solid #222;
+  margin: 24px 0;
+  font-size: 20px;
+  color: #f81313;
+  background-color: whitesmoke;
+  cursor: pointer;
+  transition: all 400ms ease;
+}
 
