--- a/Music-player/music-player-2.css
+++ b/Music-player/music-player-2.css
@@ -5,7 +5,6 @@
   box-sizing: border-box;
 }
 
-
 .container {
   width: 100%;
   height: 100vh;
@@ -13,8 +12,30 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-wrap: 
+  flex-wrap: wrap;
+}
 
+.music-player {
+  background: rgb(245, 201, 223);
+  width: 400px;
+  padding: 25px 35px;
+  text-align: center;
+}
 
+nav {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+
+nav .circle {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  background: #f8e6e6;
+  color: hotpink;
+  box-shadow: 0 5px 10px rgba(255, 26, 26, 0.22);
+}
 
 
