--- a/Music-player/music-player-2.css
+++ b/Music-player/music-player-2.css
@@ -38,4 +38,18 @@ nav .circle {
   box-shadow: 0 5px 10px rgba(255, 26, 26, 0.22);
 }
 
+.song-img {
+  width: 220px;
+  border-radius: 50%;
+  border: 8px solid #f8e6e6;
+  box-shadow: 0 10px 60px rgba(255, 26, 26, 0.22);
+}
+
+.music-player h1 {
+  font-size: 25px;
+  font-weight: 500;
+  color: hotpink;
+  margin-top: 20px;
+}
+
 
