--- a/Music-player/music-player-2.css
+++ b/Music-player/music-player-2.css
@@ -52,4 +52,28 @@ nav .circle {
   margin-top: 20px;
 }
 
+.music-player p {
+  font-size: 14px;
+  color: rgb(244, 19, 131);
+}
+
+#progress {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 6px;
+  background-color: hotpink;
+  border-radius: 4px;
+  cursor: pointer;
+  margin: 40px 0;
+}
+
+#progress::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  background: hotpink;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 8px solid #f8e6e6;
+  box-shadow: 0 5px 5px rgba(255, 26, 26, 0.22);
+}
 
