--- a/Music-player/music-player-2.css
+++ b/Music-player/music-player-2.css
@@ -77,3 +77,9 @@ nav .circle {
   box-shadow: 0 5px 5px rgba(255, 26, 26, 0.22);
 }
 
+.controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
