--- a/Music-player/music-player-2.css
+++ b/Music-player/music-player-2.css
@@ -83,3 +83,22 @@ nav .circle {
   align-items: center;
 }
 
+.controls div {
+  width: 60px;
+  height: 60px;
+  margin: 20px;
+  background: #f8e6e6;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  color: hotpink;
+  box-shadow: 0 10px 20px rgba(255, 26, 26, 0.22);
+  cursor: pointer;
+}
+
+.controls div:nth-child(2) {
+  transform: scale(1.5);
+  background: hotpink;
+  color: #f8e6e6;
+}
