--- a/Notes/notes.css
+++ b/Notes/notes.css
@@ -21,9 +21,7 @@
   font-weight: 600;
 }
 
-.container h1 img {
-  width: 60px;
-}
+.container h1 img {width: 60px;}
 
 .container button img {
   width: 25px;
@@ -45,5 +43,23 @@
   cursor: pointer;
 }
 
+.input-box {
+  position: relative;
+  width: 100%;
+  max-width: 500px;
+  min-height: 150px;
+  background-color: antiquewhite;
+  color: #333;
+  padding: 20px;
+  margin: 20px 0;
+  outline: none;
+  border-radius: 5px;
+}
 
-
+.input-box img {
+  width: 25px;
+  position: absolute;
+  bottom: 4px;
+  right: 4px;
+  cursor: pointer;
+}
