--- a/Password/password.css
+++ b/Password/password.css
@@ -30,3 +30,29 @@ body {
   background: transparent;
 }
 
+button {
+  background: transparent;
+  border: 0;
+  outline: none;
+  position: absolute;
+  cursor: pointer;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 2px;
+}
+
+button img {
+  width: 25px;
+}
+
+#message {
+  position: absolute;
+  bottom: -30px;
+  color: #fff;
+  font-size: 15px;
+  display: none;
+}
+
+::placeholder {
+  font-size: 15px;
+}
