--- a/Password/password-1.css
+++ b/Password/password-1.css
@@ -20,3 +20,21 @@ body {
   display: flex;
   align-items: center;
 }
+
+input {
+  background-color: rgb(245, 166, 245);
+}
+
+.input-box input {
+  width: 100%;
+  padding: 10px 0;
+  border: 0;
+  outline: 0;
+  font-size: 24px;
+  color: rgb(76, 1, 69);
+}
+
+.input-box img {
+  width: 35px;
+  cursor: pointer;
+}
