--- a/Product/product.css
+++ b/Product/product.css
@@ -13,7 +13,10 @@
   align-items: center;
   justify-content: center;
 }
-
-
+.product {
+  width: 90%;
+  max-width: 750px;
+  display: flex;
+}
 
 
