--- a/Product/product.css
+++ b/Product/product.css
@@ -109,3 +109,8 @@
   margin-right: 15px;
   cursor: pointer;
 }
+
+.color-1 {background: red;}
+.color-2 {background: green;}
+.color-3 {background: blue;}
+.color-4 {background: hotpink;}
