--- a/Qr-code-generator/qr-code.css
+++ b/Qr-code-generator/qr-code.css
@@ -8,3 +8,15 @@
 body {
   background: rgb(79, 2, 117);
 }
+
+.container {
+  width: 400px;
+  padding: 25px 35px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: rgb(157, 65, 203);
+  border-radius: 10px;
+  box-shadow: 7px 7px 2px rgb(70, 3, 85);
+}
