--- a/Qr-code-generator/qr-code.css
+++ b/Qr-code-generator/qr-code.css
@@ -33,3 +33,12 @@ body {
   font-weight: bold;
   display: inline-block;
 }
+
+@keyframes zoomInAndOut {
+  0%, 100% {
+    transform: scale(1); 
+  }
+  50% {
+    transform: scale(1.2);
+  }
+}
